oneplus6: Headphones work

--- a/ucm2/OnePlus/enchilada/HiFi.conf
+++ b/ucm2/OnePlus/enchilada/HiFi.conf
@@ -5,12 +5,25 @@ SectionVerb {
 		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 1"
 
 		# wcd934x enable sequence
+		#cset "name='SLIM RX1 MUX' AIF1_PB"
+		#cset "name='SLIM RX2 MUX' AIF1_PB"
+		#cset "name='RX INT7_1 MIX1 INP0' RX1"
+		#cset "name='RX INT8_1 MIX1 INP0' RX2"
+		#cset "name='RX INT1_2 MUX' RX1"
+		#cset "name='RX INT2_2 MUX' RX2"
+
+		cset "name='SLIM RX0 MUX' AIF1_PB"
 		cset "name='SLIM RX1 MUX' AIF1_PB"
-		cset "name='SLIM RX2 MUX' AIF1_PB"
+		cset "name='SLIM RX2 MUX' ZERO"
+		cset "name='SLIM RX6 MUX' ZERO"
+		cset "name='SLIM RX7 MUX' ZERO"
+		cset "name='SLIM RX3 MUX' ZERO"
+		cset "name='SLIM RX4 MUX' ZERO"
+		cset "name='SLIM RX5 MUX' ZERO"
 		cset "name='RX INT7_1 MIX1 INP0' RX1"
 		cset "name='RX INT8_1 MIX1 INP0' RX2"
-		cset "name='RX INT1_2 MUX' RX1"
-		cset "name='RX INT2_2 MUX' RX2"
+		cset "name='RX INT1_2 MUX' RX0"
+		cset "name='RX INT2_2 MUX' RX1"
 
 		cset "name='AIF1_CAP Mixer SLIM TX7' 1"
 		cset "name='CDC_IF TX7 MUX' DEC7"
@@ -55,40 +68,61 @@ SectionDevice."Speaker" {
 	}
 }
 
-SectionDevice."Earpiece" {
-	Comment "Earpiece Output"
-
-	EnableSequence [
-		cset "name='SLIM RX0 MUX' AIF1_PB"
-		cset "name='RX INT0_1 HPF cut off' CF_NEG_3DB_150HZ"
-		cset "name='RX INT0_1 MIX1 INP0' RX0"
-		cset "name='RX INT0_1 INTERP' 'RX INT0_1 MIX1'"
-		cset "name='RX INT0 DEM MUX' CLSH_DSM_OUT"
-	]
-
-	DisableSequence [
-		cset "name='SLIM RX0 MUX' ZERO"
-		cset "name='RX INT0_1 HPF cut off' CF_NEG_3DB_0P48HZ"
-		cset "name='RX INT0_1 MIX1 INP0' ZERO"
-		cset "name='RX INT0_1 INTERP' ZERO"
-		cset "name='RX INT0 DEM MUX' ZERO"
-	]
-
-	Value {
-		PlaybackPCM "hw:${CardId},1"
-		PlaybackChannels "1"
-	}
-}
+#SectionDevice."Earpiece" {
+#	Comment "Earpiece Output"
+#
+#	EnableSequence [
+#		cset "name='COMP1 Switch' 1"
+#	        cset "name='RX INT1 DEM MUX' CLSH_DSM_OUT"
+#	        cset "name='RX2 Digital Volume' 68"
+#
+#		#cset "name='SLIM RX0 MUX' AIF1_PB"
+#		#cset "name='RX INT0_1 HPF cut off' CF_NEG_3DB_150HZ"
+#		#cset "name='RX INT0_1 MIX1 INP0' RX0"
+#		#cset "name='RX INT0_1 INTERP' 'RX INT0_1 MIX1'"
+#		#cset "name='RX INT0 DEM MUX' CLSH_DSM_OUT"
+#	]
+#
+#	DisableSequence [
+#		cset "name='COMP1 Switch' 0"
+#	        cset "name='COMP2 Switch' 0"
+#	        cset "name='RX1 Digital Volume' 0"
+#	        cset "name='RX2 Digital Volume' 0"
+#	        cset "name='RX INT1 DEM MUX' ZERO"
+#	        cset "name='RX INT2 DEM MUX' ZERO"
+#
+#		#cset "name='SLIM RX0 MUX' ZERO"
+#		#cset "name='RX INT0_1 HPF cut off' CF_NEG_3DB_0P48HZ"
+#		#cset "name='RX INT0_1 MIX1 INP0' ZERO"
+#		#cset "name='RX INT0_1 INTERP' ZERO"
+#		#cset "name='RX INT0 DEM MUX' ZERO"
+#	]
+#
+#	Value {
+#		PlaybackPCM "hw:${CardId},0"
+#		PlaybackChannels "2"
+#	}
+#}
 
 SectionDevice."Headphones" {
 	Comment "HeadPhones Stereo Output"
 
 	EnableSequence [
-		Include.File /codecs/wcd934x/HeadphonesEnableSequence.conf
+		cset "name='COMP1 Switch' 1"
+	        cset "name='COMP2 Switch' 1"
+	        cset "name='RX INT1 DEM MUX' CLSH_DSM_OUT"
+	        cset "name='RX INT2 DEM MUX' CLSH_DSM_OUT"
+	        cset "name='RX0 Digital Volume' 68"
+	        cset "name='RX1 Digital Volume' 68"
 	]
 
 	DisableSequence [
-		Include.File /codecs/wcd934x/HeadphonesDisableSequence.conf
+		cset "name='COMP1 Switch' 0"
+	        cset "name='COMP2 Switch' 0"
+	        cset "name='RX0 Digital Volume' 0"
+	        cset "name='RX1 Digital Volume' 0"
+	        cset "name='RX INT1 DEM MUX' ZERO"
+	        cset "name='RX INT2 DEM MUX' ZERO"
 	]
 
 	Value {
