--- a/ucm2/DB410c/HiFi.conf
+++ b/ucm2/DB410c/HiFi.conf
@@ -76,7 +76,7 @@ SectionDevice."Earpiece" {
 	}
 }
 
-SectionDevice."Handset" {
+SectionDevice."Headset" {
 	Comment "Headset Microphone"
 
 	EnableSequence [
