--- a/ucm2/codecs/msm8916-wcd/Speaker.conf
+++ b/ucm2/codecs/msm8916-wcd/Speaker.conf
@@ -14,6 +14,7 @@ SectionDevice."Speaker" {
 	]
 
 	DisableSequence [
+		cset "name='RX3 Digital Volume' 0"
 		cset "name='SPK DAC Switch' 0"
 		cset "name='RX3 MIX1 INP1' ZERO"
 	]
