--- a/ucm2/codecs/msm8916-wcd/Earpiece.conf
+++ b/ucm2/codecs/msm8916-wcd/Earpiece.conf
@@ -6,6 +6,20 @@ SectionDevice."Earpiece" {
 		"Headphones"
 	]
 
+	EnableSequence [
+		cset "name='RX1 MIX1 INP1' RX1"
+		cset "name='RDAC2 MUX' RX1"
+		cset "name='EAR_S' 1"
+		## gain to  0dB
+		cset "name='RX1 Digital Volume' 128"
+	]
+
+	DisableSequence [
+		cset "name='RX1 Digital Volume' 0"
+		cset "name='EAR_S' 0"
+		cset "name='RX1 MIX1 INP1' ZERO"
+	]
+
 	Value {
 		PlaybackPriority 100
 		PlaybackPCM "plughw:${CardId},1"
