codecs/msm8916-wcd: Add ConflictingDevice for capture devices
At the moment, all capture devices are configured to go through DEC1,
so there is no way to use more than one of the microphones at a time.

Cc: Srinivas Kandagatla <srinivas.kandagatla@linaro.org>
Signed-off-by: Stephan Gerhold <stephan@gerhold.net>
---
Changes in v2:
  - Update for Mic1/Mic2/Mic3/Headset rename

--- a/ucm2/codecs/msm8916-wcd/DigitalMic.conf
+++ b/ucm2/codecs/msm8916-wcd/DigitalMic.conf
@@ -1,6 +1,12 @@
 SectionDevice."Mic3" {
 	Comment "Digital Microphone"
 
+	ConflictingDevice [
+		"Mic1"
+		"Mic2"
+		"Headset"
+	]
+
 	EnableSequence [
 		cset "name='DEC1 MUX' DMIC1"
 		cset "name='CIC1 MUX' DMIC"
