--- a/ucm2/codecs/msm8916-wcd/PrimaryMic.conf
+++ b/ucm2/codecs/msm8916-wcd/PrimaryMic.conf
@@ -1,6 +1,12 @@
 SectionDevice."Mic1" {
 	Comment "Primary Microphone"
 
+	ConflictingDevice [
+		"Mic2"
+		"Mic3"
+		"Headset"
+	]
+
 	EnableSequence [
 		cset "name='DEC1 MUX' ADC1"
 		cset "name='CIC1 MUX' AMIC"
