--- a/ucm2/codecs/msm8916-wcd/SecondaryMic.conf
+++ b/ucm2/codecs/msm8916-wcd/SecondaryMic.conf
@@ -1,6 +1,12 @@
 SectionDevice."Mic2" {
 	Comment "Secondary Microphone"
 
+	ConflictingDevice [
+		"Mic1"
+		"Mic3"
+		"Headset"
+	]
+
 	EnableSequence [
 		cset "name='DEC1 MUX' ADC2"
 		cset "name='CIC1 MUX' AMIC"
