msm8916*: Use ${CardComponents} to configure QDSP6 when enabled (v4)
If the card has qdsp6 in its components, configure the additional
mixers to route DSP audio to PM8916.

v2: Use ${CardComponents} instead of ${CardLongName}
v3: Configure MultiMedia3 for compressed playback
v4: Configure MultiMedia4 for QUAT_MI2S_RX, MultiMedia4 for compressed playback

--- a/ucm2/samsung-a2015/HiFi.conf
+++ b/ucm2/samsung-a2015/HiFi.conf
@@ -7,6 +7,7 @@ SectionVerb {
 		CapturePCM "plughw:${CardId},1"
 	}
 }
+<platforms/msm8916/qdsp6-components.conf>
 
 SectionDevice."Speaker" {
 	Comment "Speaker playback"
