--- a/ucm2/msm8916/HiFi.conf
+++ b/ucm2/msm8916/HiFi.conf
@@ -7,6 +7,7 @@ SectionVerb {
 		CapturePCM "plughw:${CardId},1"
 	}
 }
+<platforms/msm8916/qdsp6-components.conf>
 
 <codecs/msm8916-wcd/Speaker.conf>
 <codecs/msm8916-wcd/Earpiece.conf>
