HACK: codecs/msm8916-wcd: Move PlaybackPCM/CapturePCM back to top-level
See: https://lore.kernel.org/alsa-devel/20200211155537.GA16850@gerhold.net/

--- a/ucm2/DB410c/HiFi.conf
+++ b/ucm2/DB410c/HiFi.conf
@@ -1,6 +1,13 @@
 # Use case configuration for DB410c board.
 # Author: Srinivas Kandagatla <srinivas.kandagatla@linaro.org>
 
+SectionVerb {
+	Value {
+		PlaybackPCM "plughw:${CardId},1"
+		CapturePCM "plughw:${CardId},2"
+	}
+}
+
 <codecs/msm8916-wcd/Speaker.conf>
 <codecs/msm8916-wcd/Headphones.conf>
 
