--- a/ucm2/Qualcomm/sdm845/HiFi.conf
+++ b/ucm2/Qualcomm/sdm845/HiFi.conf
@@ -1,22 +1,37 @@
-# Use case configuration for DB845c.
-# Author: Srinivas Kandagatla <srinivas.kandagatla@linaro.org>
 
 SectionVerb {
-
 	EnableSequence [
+		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia1' 1"
 		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia2' 1"
+		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 1"
+		
+		#wcd934x enable sequence
+		cset "name='SLIM RX1 MUX' AIF1_PB"
+		cset "name='SLIM RX2 MUX' AIF1_PB"
+		cset "name='SLIM RX6 MUX' ZERO"
+		cset "name='SLIM RX7 MUX' ZERO"
+		cset "name='SLIM RX3 MUX' ZERO"
+		cset "name='SLIM RX4 MUX' ZERO"
+		cset "name='SLIM RX5 MUX' ZERO"
+		cset "name='AIF1_CAP Mixer SLIM TX0' 1"
+		cset "name='RX INT7_1 MIX1 INP0' RX1"
+		cset "name='RX INT8_1 MIX1 INP0' RX2"
+		cset "name='RX INT1_2 MUX' RX1"
+		cset "name='RX INT2_2 MUX' RX2"
+		cset "name='CDC_IF TX0 MUX' DEC0"
 	]
 
-	Include.wcde.File "/codecs/wcd934x/DefaultEnableSeq.conf"
-	Include.wsae.File "/codecs/wsa881x/DefaultEnableSeq.conf"
-
-	Include.wcdd {
-		File "/codecs/wcd934x/DefaultDisableSeq.conf"
-		Before.DisableSequence "0"
-	}
-
 	DisableSequence [
+		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia1' 0"
 		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia2' 0"
+		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 0"
+
+		#wcd934x disable sequence
+		cset "name='RX INT7_1 MIX1 INP0' ZERO"
+		cset "name='RX INT8_1 MIX1 INP0' ZERO"
+		cset "name='RX INT1_2 MUX' ZERO"
+		cset "name='RX INT2_2 MUX' ZERO"
+		cset "name='CDC_IF TX0 MUX' ZERO"
 	]
 
 	Value {
@@ -24,17 +39,77 @@ SectionVerb {
 	}
 }
 
-SectionDevice."Speaker" {
-	Comment "Speaker playback"
-
-	Include.wcde.File "/codecs/wcd934x/SpeakerEnableSeq.conf"
-	Include.wsae.File "/codecs/wsa881x/SpeakerEnableSeq.conf"
-	Include.wsad.File "/codecs/wsa881x/SpeakerDisableSeq.conf"
-	Include.wcdd.File "/codecs/wcd934x/SpeakerDisableSeq.conf"
+SectionDevice."Speakers" {
+	Comment "Speakers Stereo Output"
+	
+	EnableSequence [
+		cset "name='Configuration' 4"
+		cset "name='TAS2559 DAC Playback Volume' 15"
+	]
 
 	Value {
-		PlaybackPriority 100
-		PlaybackPCM "hw:${CardId},1"
-		PlaybackVolume "RX2 Digital Volume"
+		PlaybackPCM "hw:0,0"
 	}
 }
+
+SectionDevice."Earpiece" {
+	Comment "Earpiece Output"
+	
+	EnableSequence [
+		cset "name='Configuration' 3"
+		cset "name='TAS2559 DAC Playback Volume' 7"
+	]
+
+	Value {
+		PlaybackPCM "hw:0,0"
+	}
+}
+
+SectionDevice."HeadPhones" {
+        Comment "HeadPhones Stereo Output"
+
+        EnableSequence [
+		cset "name='COMP1 Switch' 1"
+		cset "name='COMP2 Switch' 1"
+		cset "name='RX INT1 DEM MUX' CLSH_DSM_OUT"
+		cset "name='RX INT2 DEM MUX' CLSH_DSM_OUT"
+		cset "name='RX1 Digital Volume' 68"
+		cset "name='RX2 Digital Volume' 68"
+        ]
+
+        DisableSequence [
+		cset "name='COMP1 Switch' 0"
+		cset "name='COMP2 Switch' 0"
+		cset "name='RX1 Digital Volume' 0"
+		cset "name='RX2 Digital Volume' 0"
+		cset "name='RX INT1 DEM MUX' ZERO"
+		cset "name='RX INT2 DEM MUX' ZERO"
+        ]
+
+        Value {
+                PlaybackPCM "hw:0,1"
+        }
+}
+
+SectionDevice."HeadPhonesMic" {
+        Comment "HeadPhones Mic"
+
+        EnableSequence [
+		cset "name='AMIC MUX0' ADC2"
+		cset "name='ADC2 Volume' 12"
+		cset "name='ADC MUX0' AMIC"
+        ]
+
+        DisableSequence [
+		cset "name='AMIC MUX0' ZERO"
+		cset "name='ADC2 Volume' 0"
+        ]
+
+        Value {
+                CapturePCM "hw:0,2"
+                CaptureChannels "2"
+                CaptureVolume "ADC2 Volume"
+        }
+}
+
+
