--- a/ucm2/Qualcomm/sdm845/HiFi.conf
+++ b/ucm2/Qualcomm/sdm845/HiFi.conf
@@ -1,10 +1,9 @@
-
 SectionVerb {
 	EnableSequence [
 		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia1' 1"
 		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia2' 1"
 		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 1"
-		
+
 		#wcd934x enable sequence
 		cset "name='SLIM RX1 MUX' AIF1_PB"
 		cset "name='SLIM RX2 MUX' AIF1_PB"
@@ -13,25 +12,28 @@ SectionVerb {
 		cset "name='SLIM RX3 MUX' ZERO"
 		cset "name='SLIM RX4 MUX' ZERO"
 		cset "name='SLIM RX5 MUX' ZERO"
-		cset "name='AIF1_CAP Mixer SLIM TX0' 1"
 		cset "name='RX INT7_1 MIX1 INP0' RX1"
 		cset "name='RX INT8_1 MIX1 INP0' RX2"
 		cset "name='RX INT1_2 MUX' RX1"
 		cset "name='RX INT2_2 MUX' RX2"
-		cset "name='CDC_IF TX0 MUX' DEC0"
+
+		cset "name='AIF1_CAP Mixer SLIM TX7' 1"
+		cset "name='CDC_IF TX7 MUX' DEC7"
 	]
 
 	DisableSequence [
-		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia1' 0"
-		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia2' 0"
-		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 0"
+		cset "name='AIF1_CAP Mixer SLIM TX7' 0"
+		cset "name='CDC_IF TX7 MUX' ZERO"
 
 		#wcd934x disable sequence
 		cset "name='RX INT7_1 MIX1 INP0' ZERO"
 		cset "name='RX INT8_1 MIX1 INP0' ZERO"
 		cset "name='RX INT1_2 MUX' ZERO"
 		cset "name='RX INT2_2 MUX' ZERO"
-		cset "name='CDC_IF TX0 MUX' ZERO"
+
+		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia1' 0"
+		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia2' 0"
+		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 0"
 	]
 
 	Value {
@@ -44,7 +46,7 @@ SectionDevice."Speakers" {
 	
 	EnableSequence [
 		cset "name='Configuration' 4"
-		cset "name='TAS2559 DAC Playback Volume' 15"
+		cset "name='TAS2559 DAC Playback Volume' 35"
 	]
 
 	Value {
@@ -94,22 +96,63 @@ SectionDevice."HeadPhones" {
 SectionDevice."HeadPhonesMic" {
         Comment "HeadPhones Mic"
 
+	ConflictingDevice [
+                "InBuiltMic"
+        ]
+
         EnableSequence [
+		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 1"
+		cset "name='AIF1_CAP Mixer SLIM TX0' 1"
+		cset "name='CDC_IF TX0 MUX' DEC0"
 		cset "name='AMIC MUX0' ADC2"
 		cset "name='ADC2 Volume' 12"
 		cset "name='ADC MUX0' AMIC"
         ]
 
         DisableSequence [
+		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 0"
+		cset "name='CDC_IF TX0 MUX' ZERO"
 		cset "name='AMIC MUX0' ZERO"
 		cset "name='ADC2 Volume' 0"
+		cset "name='ADC MUX0' ZERO"
+		cset "name='AIF1_CAP Mixer SLIM TX0' 0"
         ]
 
         Value {
                 CapturePCM "hw:0,2"
-                CaptureChannels "2"
+                CaptureChannels "1"
                 CaptureVolume "ADC2 Volume"
         }
 }
 
+SectionDevice."InBuiltMic" {
+        Comment "InBuilt Mic"
 
+	ConflictingDevice [
+		"HeadPhonesMic"
+	]
+
+        EnableSequence [
+		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 1"
+		cset "name='AIF1_CAP Mixer SLIM TX7' 1"
+                cset "name='CDC_IF TX7 MUX' DEC7"
+		cset "name='ADC MUX7' AMIC"
+                cset "name='AMIC MUX7' ADC3"
+                cset "name='ADC3 Volume' 12"
+        ]
+
+        DisableSequence [
+		 cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 0"
+		cset "name='CDC_IF TX7 MUX' ZERO"
+                cset "name='AMIC MUX7' ZERO"
+                cset "name='ADC3 Volume' 0"
+		cset "name='ADC MUX7' ZERO"
+		cset "name='AIF1_CAP Mixer SLIM TX7' 0"
+        ]
+
+        Value {
+                CapturePCM "hw:0,2"
+                CaptureChannels "1"
+                CaptureVolume "ADC3 Volume"
+        }
+}
