--- a/ucm2/OnePlus/enchilada/HiFi.conf
+++ b/ucm2/OnePlus/enchilada/HiFi.conf
@@ -14,7 +14,7 @@ SectionVerb {
 
 		cset "name='SLIM RX0 MUX' AIF1_PB"
 		cset "name='SLIM RX1 MUX' AIF1_PB"
-		cset "name='SLIM RX2 MUX' ZERO"
+		cset "name='SLIM RX2 MUX' AIF1_PB"
 		cset "name='SLIM RX6 MUX' ZERO"
 		cset "name='SLIM RX7 MUX' ZERO"
 		cset "name='SLIM RX3 MUX' ZERO"
@@ -68,41 +68,28 @@ SectionDevice."Speaker" {
 	}
 }
 
-#SectionDevice."Earpiece" {
-#	Comment "Earpiece Output"
-#
-#	EnableSequence [
-#		cset "name='COMP1 Switch' 1"
-#	        cset "name='RX INT1 DEM MUX' CLSH_DSM_OUT"
-#	        cset "name='RX2 Digital Volume' 68"
-#
-#		#cset "name='SLIM RX0 MUX' AIF1_PB"
-#		#cset "name='RX INT0_1 HPF cut off' CF_NEG_3DB_150HZ"
-#		#cset "name='RX INT0_1 MIX1 INP0' RX0"
-#		#cset "name='RX INT0_1 INTERP' 'RX INT0_1 MIX1'"
-#		#cset "name='RX INT0 DEM MUX' CLSH_DSM_OUT"
-#	]
-#
-#	DisableSequence [
-#		cset "name='COMP1 Switch' 0"
-#	        cset "name='COMP2 Switch' 0"
-#	        cset "name='RX1 Digital Volume' 0"
-#	        cset "name='RX2 Digital Volume' 0"
-#	        cset "name='RX INT1 DEM MUX' ZERO"
-#	        cset "name='RX INT2 DEM MUX' ZERO"
-#
-#		#cset "name='SLIM RX0 MUX' ZERO"
-#		#cset "name='RX INT0_1 HPF cut off' CF_NEG_3DB_0P48HZ"
-#		#cset "name='RX INT0_1 MIX1 INP0' ZERO"
-#		#cset "name='RX INT0_1 INTERP' ZERO"
-#		#cset "name='RX INT0 DEM MUX' ZERO"
-#	]
-#
-#	Value {
-#		PlaybackPCM "hw:${CardId},0"
-#		PlaybackChannels "2"
-#	}
-#}
+SectionDevice."Earpiece" {
+	Comment "Earpiece Output"
+
+	EnableSequence [
+		cset "name='COMP1 Switch' 0"
+		cset "name='COMP2 Switch' 1"
+		cset "name='RX INT0 DEM MUX' CLSH_DSM_OUT"
+                cset "name='RX0 Digital Volume' 68"
+	]
+	DisableSequence [
+		cset "name='COMP1 Switch' 0"
+                cset "name='COMP2 Switch' 0"
+                cset "name='RX2 Digital Volume' 0"
+                cset "name='RX INT1 DEM MUX' ZERO"
+		cset "name='RX INT2 DEM MUX' ZERO"
+	]
+
+	Value {
+		PlaybackPCM "hw:${CardId},1"
+		PlaybackChannels "2"
+	}
+}
 
 SectionDevice."Headphones" {
 	Comment "HeadPhones Stereo Output"
@@ -110,10 +97,13 @@ SectionDevice."Headphones" {
 	EnableSequence [
 		cset "name='COMP1 Switch' 1"
 	        cset "name='COMP2 Switch' 1"
+		cset "name='RX INT0 DEM MUX' CLSH_DSM_OUT"
 	        cset "name='RX INT1 DEM MUX' CLSH_DSM_OUT"
 	        cset "name='RX INT2 DEM MUX' CLSH_DSM_OUT"
 	        cset "name='RX0 Digital Volume' 68"
 	        cset "name='RX1 Digital Volume' 68"
+		# Disable earpiece
+		cset "name='RX2 Digital Volume' 0"
 	]
 
 	DisableSequence [
