--- a/ucm2/codecs/wcd934x/DefaultDisableSeq.conf
+++ b/ucm2/codecs/wcd934x/DefaultDisableSeq.conf
@@ -4,4 +4,6 @@ DisableSequence [
 	cset "name='RX INT1_2 MUX' ZERO"
 	cset "name='RX INT2_2 MUX' ZERO"
 	cset "name='CDC_IF TX0 MUX' ZERO"
+	cset "name='CDC_IF TX1 MUX' ZERO"
+	cset "name='CDC_IF TX2 MUX' ZERO"
 ]
