--- a/ucm2/codecs/wcd934x/DefaultEnableSeq.conf
+++ b/ucm2/codecs/wcd934x/DefaultEnableSeq.conf
@@ -4,7 +4,12 @@ EnableSequence [
 	cset "name='SLIM RX2 MUX' AIF2_PB"
 	cset "name='SLIM RX3 MUX' AIF2_PB"
 
-
 	cset "name='AIF1_CAP Mixer SLIM TX0' 1"
 	cset "name='CDC_IF TX0 MUX' DEC0"
+
+	cset "name='AIF2_CAP Mixer SLIM TX6' 1"
+	cset "name='CDC_IF TX6 MUX' DEC6"
+
+	cset "name='AIF3_CAP Mixer SLIM TX7' 1"
+	cset "name='CDC_IF TX7 MUX' DEC7"
 ]
