--- a/ucm2/codecs/wcd934x/init.conf
+++ b/ucm2/codecs/wcd934x/init.conf
@@ -5,7 +5,9 @@ BootSequence [
 	cset "name='RX2 Digital Volume' 80"
 	cset "name='RX7 Digital Volume' 80"
 	cset "name='RX8 Digital Volume' 80"
+	cset "name='ADC1 Volume' 12"
 	cset "name='ADC2 Volume' 12"
+	cset "name='ADC3 Volume' 12"
 ]
 
 LibraryConfig.remap.Config {
