codecs: wcd934x: set default earpiece volume
Configure the earpiece volume as well with a default value
like all the other output interfaces of the WCD934x codec.

--- a/ucm2/codecs/wcd934x/init.conf
+++ b/ucm2/codecs/wcd934x/init.conf
@@ -1,6 +1,7 @@
 # WCD934X specific volume control settings
 
 BootSequence [
+	cset "name='RX0 Digital Volume' 80"
 	cset "name='RX1 Digital Volume' 80"
 	cset "name='RX2 Digital Volume' 80"
 	cset "name='RX7 Digital Volume' 80"
