OP6 initial port

--- a/ucm2/codecs/wcd934x/EarpieceEnableSeq.conf
+++ b/ucm2/codecs/wcd934x/EarpieceEnableSeq.conf
@@ -1,4 +1,5 @@
 EnableSequence [
 	cset "name='RX INT0_1 MIX1 INP0' RX0"
 	cset "name='RX INT0 DEM MUX' CLSH_DSM_OUT"
+	cset "name='EAR PA Volume' 4"
 ]
