--- a/ucm2/OnePlus/enchilada/HiFi.conf
+++ b/ucm2/OnePlus/enchilada/HiFi.conf
@@ -1,42 +1,53 @@
+# HiFI use case configuration for Oneplus 6 (echilada).
+# Author: Caleb Connolly <caleb@connolly.tech>
+# Author: Joel Selvaraj <joelselvaraj.oss@gmail.com>
+#
+# Playback Devices
+#  - Internal Speaker    : TFA driver     : MultiMedia1 <-> QUAT_MI2S_RX
+#  - Earpiece            : WCD934x driver : MultiMedia3 <-> SLIMBUS_0_RX (AIF1_PB)
+#  - Headphones		     : WCD934x driver : MultiMedia5 <-> SLIMBUS_1_RX (AIF2_PB)
+# Capture Devices
+#  - Headphones Mic      : WCD934x driver : MultiMedia2 <-> SLIMBUS_0_TX (AIF1_CAP, ADC2, TX0)
+#  - Internal Top Mic 	 : WCD934x driver : MultiMedia4 <-> SLIMBUS_1_TX (AIF2_CAP, ADC3, TX7)
+#  - Internal Bottom Mic : WCD934x driver : MultiMedia6 <-> SLIMBUS_2_TX (AIF3_CAP, ADC4, TX8)
+
 SectionVerb {
 	EnableSequence [
 		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia1' 1"
-		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia2' 1"
-		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 1"
-		cset "name='AIF1_CAP Mixer SLIM TX7' 1"
-		cset "name='CDC_IF TX7 MUX' DEC7"
+		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia3' 1"
+		cset "name='SLIMBUS_1_RX Audio Mixer MultiMedia5' 1"
+
+		cset "name='MultiMedia2 Mixer SLIMBUS_0_TX' 1"
+		cset "name='MultiMedia4 Mixer SLIMBUS_1_TX' 1"
+		cset "name='MultiMedia6 Mixer SLIMBUS_2_TX' 1"
+
 		cset "name='SLIM RX0 MUX' AIF1_PB"
 		cset "name='SLIM RX1 MUX' AIF1_PB"
-		cset "name='SLIM RX2 MUX' AIF1_PB"
-		cset "name='SLIM RX3 MUX' AIF1_PB"
-		cset "name='SLIM RX4 MUX' ZERO"
-		cset "name='SLIM RX5 MUX' ZERO"
-		cset "name='SLIM RX6 MUX' ZERO"
-		cset "name='SLIM RX7 MUX' ZERO"
-		cset "name='RX INT7_1 MIX1 INP0' RX0"
-		cset "name='RX INT8_1 MIX1 INP0' RX1"
-		cset "name='RX INT1_2 MUX' RX0"
-		cset "name='RX INT2_2 MUX' RX1"
+		cset "name='SLIM RX2 MUX' AIF2_PB"
+		cset "name='SLIM RX3 MUX' AIF2_PB"
+
+		cset "name='AIF1_CAP Mixer SLIM TX0' 1"
+		cset "name='CDC_IF TX0 MUX' DEC0"
+
+		cset "name='AIF2_CAP Mixer SLIM TX7' 1"
+		cset "name='CDC_IF TX7 MUX' DEC7"
+
+		cset "name='AIF3_CAP Mixer SLIM TX8' 1"
+		cset "name='CDC_IF TX8 MUX' DEC8"
 	]
 
 	DisableSequence [
 		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia1' 0"
-		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia2' 0"
-		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 0"
-		cset "name='AIF1_CAP Mixer SLIM TX7' 0"
+		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia3' 0"
+		cset "name='SLIMBUS_1_RX Audio Mixer MultiMedia5' 0"
+
+		cset "name='MultiMedia2 Mixer SLIMBUS_0_TX' 0"
+		cset "name='MultiMedia4 Mixer SLIMBUS_1_TX' 0"
+		cset "name='MultiMedia6 Mixer SLIMBUS_2_TX' 0"
+
+		cset "name='CDC_IF TX0 MUX' ZERO"
 		cset "name='CDC_IF TX7 MUX' ZERO"
-		cset "name='SLIM RX0 MUX' ZERO"
-		cset "name='SLIM RX1 MUX' ZERO"
-		cset "name='SLIM RX2 MUX' ZERO"
-		cset "name='SLIM RX3 MUX' ZERO"
-		cset "name='SLIM RX4 MUX' ZERO"
-		cset "name='SLIM RX5 MUX' ZERO"
-		cset "name='SLIM RX6 MUX' ZERO"
-		cset "name='SLIM RX7 MUX' ZERO"
-		cset "name='RX INT7_1 MIX1 INP0' ZERO"
-		cset "name='RX INT8_1 MIX1 INP0' ZERO"
-		cset "name='RX INT1_2 MUX' ZERO"
-		cset "name='RX INT2_2 MUX' ZERO"
+		cset "name='CDC_IF TX8 MUX' ZERO"
 	]
 
 	Value {
@@ -45,121 +56,97 @@ SectionVerb {
 }
 
 SectionDevice."Speaker" {
-	Comment "Speakers Output"
+	Comment "Speaker"
 
-	EnableSequence [
-		cset "name='Amp DSP Switch' 1"
-	]
+	Value {
+		PlaybackPriority 200
+		PlaybackPCM "hw:${CardId},0" # MultiMedia1
+	}
+}
 
-	DisableSequence [
-		cset "name='Amp DSP Switch' 0"
-	]
+SectionDevice."Earpiece" {
+	Comment "Earpiece"
+
+	Include.wcdeare.File "/codecs/wcd934x/EarpieceEnableSeq.conf"
+	Include.wcdeard.File "/codecs/wcd934x/EarpieceDisableSeq.conf"
 
 	Value {
 		PlaybackPriority 100
-		PlaybackPCM "hw:${CardId},0"
+		PlaybackPCM "hw:${CardId},2" # MultiMedia3
+		PlaybackVolume "RX0 Digital Volume"
 	}
 }
 
 SectionDevice."Headphones" {
-	Comment "Headphones"
+	Comment "Headset"
 
-	EnableSequence [
-		cset "name='SLIM RX2 MUX' AIF1_PB"
-		cset "name='SLIM RX3 MUX' AIF1_PB"
-		cset "name='RX INT1 DEM MUX' CLSH_DSM_OUT"
-		cset "name='RX INT2 DEM MUX' CLSH_DSM_OUT"
-		cset "name='RX INT1_1 MIX1 INP0' RX2"
-		cset "name='RX INT2_1 MIX1 INP0' RX3"
-		cset "name='RX INT1_1 INTERP' 'RX INT1_1 MIX1'"
-		cset "name='RX INT2_1 INTERP' 'RX INT2_1 MIX1'"
-		cset "name='RX0 Digital Volume' 0"
-		cset "name='RX1 Digital Volume' 80"
-		cset "name='RX2 Digital Volume' 80"
-	]
-
-	DisableSequence [
-		cset "name='SLIM RX2 MUX' ZERO"
-		cset "name='SLIM RX3 MUX' ZERO"
-		cset "name='RX INT1 DEM MUX' ZERO"
-		cset "name='RX INT2 DEM MUX' ZERO"
-		cset "name='RX INT1_1 MIX1 INP0' ZERO"
-		cset "name='RX INT2_1 MIX1 INP0' ZERO"
-		cset "name='RX INT1_1 INTERP' ZERO"
-		cset "name='RX INT2_1 INTERP' ZERO"
-		cset "name='RX1 Digital Volume' 0"
-		cset "name='RX2 Digital Volume' 0"
-	]
+	Include.wcdhpe.File "/codecs/wcd934x/HeadphoneEnableSeq.conf"
+	Include.wcdhpd.File "/codecs/wcd934x/HeadphoneDisableSeq.conf"
 
 	Value {
-		PlaybackPCM "hw:${CardId},1"
-		PlaybackChannels "2"
-		PlaybackPriority 50
+		PlaybackPriority 300
+		PlaybackPCM "hw:${CardId},4" # MultiMedia5
+		PlaybackMixer "default:${CardId}"
+		PlaybackMixerElem "HP Digital"
+		JackControl "Headset Jack"
 	}
 }
 
-SectionDevice."Mic" {
-	Comment "Phone Mic"
+SectionDevice."Headset" {
+	Comment "Headset Microphone"
+
+	Include.wcdmic1e.File "/codecs/wcd934x/HeadphoneMicEnableSeq.conf"
+	Include.wcdmic1d.File "/codecs/wcd934x/HeadphoneMicDisableSeq.conf"
+
+	Value {
+		CapturePriority 300
+		CapturePCM "hw:${CardId},1" # MultiMedia2
+		CaptureMixerElem "ADC2"
+		JackControl "Headset Jack"
+		CaptureVolume "ADC2 Volume"
+	}
+}
+
+SectionDevice."Mic1" {
+	Comment "Top Microphone"
+
+	Include.wcdmic2e.File "/codecs/wcd934x/AdditionalMic1EnableSeq.conf"
+	Include.wcdmic2d.File "/codecs/wcd934x/AdditionalMic1DisableSeq.conf"
+
+	Value {
+		CapturePriority 100
+		CapturePCM "hw:${CardId},3" # MultiMedia4
+		CaptureMixerElem "ADC3"
+		CaptureVolume "ADC3 Volume"
+	}
+}
+
+SectionDevice."Mic2" {
+	Comment "Bottom Microphone"
 
 	ConflictingDevice [
 		"Headset"
 	]
 
 	EnableSequence [
-		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 1"
-		cset "name='AIF1_CAP Mixer SLIM TX7' 1"
-		cset "name='CDC_IF TX7 MUX' DEC7"
-		cset "name='ADC MUX7' AMIC"
-		cset "name='AMIC MUX7' ADC3"
-		cset "name='ADC3 Volume' 12"
-	]
-
-	DisableSequence [
-		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 0"
-		cset "name='CDC_IF TX7 MUX' ZERO"
-		cset "name='AMIC MUX7' ZERO"
-		cset "name='ADC3 Volume' 0"
-		cset "name='ADC MUX7' ZERO"
-		cset "name='AIF1_CAP Mixer SLIM TX7' 0"
-	]
-
-	Value {
-		CapturePCM "hw:${CardId},2"
-		CaptureChannels "1"
-		CaptureVolume "ADC3 Volume"
-		CapturePriority 100
-	}
-}
-
-SectionDevice."Headset" {
-	Comment "Headset Mic"
-
-	ConflictingDevice [
-		"Mic"
-	]
-
-	EnableSequence [
-		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 1"
 		cset "name='AIF1_CAP Mixer SLIM TX0' 1"
 		cset "name='CDC_IF TX0 MUX' DEC0"
-		cset "name='AMIC MUX0' ADC2"
-		cset "name='ADC2 Volume' 12"
 		cset "name='ADC MUX0' AMIC"
+		cset "name='AMIC MUX0' ADC4"
+		cset "name='AMIC4_5 SEL' AMIC4"
+		cset "name='ADC4 Volume' 12"
 	]
 
 	DisableSequence [
-		cset "name='MultiMedia3 Mixer SLIMBUS_0_TX' 0"
-		cset "name='CDC_IF TX0 MUX' ZERO"
 		cset "name='AMIC MUX0' ZERO"
-		cset "name='ADC2 Volume' 0"
 		cset "name='ADC MUX0' ZERO"
-		cset "name='AIF1_CAP Mixer SLIM TX0' 0"
+		cset "name='ADC4 Volume' 0"
 	]
 
 	Value {
-		CapturePCM "hw:${CardId},2"
-		CaptureChannels "1"
-		CaptureVolume "ADC2 Volume"
-		CapturePriority 50
+		CapturePriority 200
+		CapturePCM "hw:${CardId},5" # MultiMedia6
+		CaptureMixerElem "ADC4"
+		CaptureVolume "ADC4 Volume"
 	}
 }
