enchilada: add and use our own boot sequence

--- a/ucm2/OnePlus/enchilada/enchilada.conf
+++ b/ucm2/OnePlus/enchilada/enchilada.conf
@@ -7,4 +7,27 @@ SectionUseCase."HiFi" {
 
 Include.card-init.File "/lib/card-init.conf"
 Include.ctl-remap.File "/lib/ctl-remap.conf"
-Include.codec-init.File "/codecs/wcd934x/init.conf"
+
+BootSequence [
+	cset "name='EAR PA Volume' 4"
+	cset "name='RX0 Digital Volume' 84"
+	cset "name='RX1 Digital Volume' 84"
+	cset "name='RX2 Digital Volume' 84"
+	cset "name='ADC1 Volume' 12"
+	cset "name='ADC2 Volume' 12"
+	cset "name='ADC3 Volume' 12"
+	cset "name='ADC4 Volume' 12"
+	cset "name='DEC0 Volume' 84"
+	cset "name='DEC7 Volume' 84"
+	cset "name='DEC8 Volume' 84"
+]
+
+LibraryConfig.remap.Config {
+	ctl.default.map {
+		# Merge two mono controls into one stereo
+		"name='HP Digital Volume'" {
+			"name='RX1 Digital Volume'".vindex.0 0
+			"name='RX2 Digital Volume'".vindex.1 0
+		}
+	}
+}
