op6: minimal earpiece and bottom mic. Earpiece volume very low though

--- a/ucm2/OnePlus/enchilada/HiFi.conf
+++ b/ucm2/OnePlus/enchilada/HiFi.conf
@@ -13,41 +13,22 @@
 
 SectionVerb {
 	EnableSequence [
-		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia1' 1"
-		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia3' 1"
-		cset "name='SLIMBUS_1_RX Audio Mixer MultiMedia5' 1"
-
+		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia1' 1"
 		cset "name='MultiMedia2 Mixer SLIMBUS_0_TX' 1"
-		cset "name='MultiMedia4 Mixer SLIMBUS_1_TX' 1"
-		cset "name='MultiMedia6 Mixer SLIMBUS_2_TX' 1"
 
 		cset "name='SLIM RX0 MUX' AIF1_PB"
-		cset "name='SLIM RX1 MUX' AIF1_PB"
-		cset "name='SLIM RX2 MUX' AIF2_PB"
-		cset "name='SLIM RX3 MUX' AIF2_PB"
+		cset "name='RX INT0 DEM MUX' CLSH_DSM_OUT"
 
-		cset "name='AIF1_CAP Mixer SLIM TX0' 1"
-		cset "name='CDC_IF TX0 MUX' DEC0"
-
-		cset "name='AIF2_CAP Mixer SLIM TX7' 1"
+		cset "name='AIF1_CAP Mixer SLIM TX7' 1"
 		cset "name='CDC_IF TX7 MUX' DEC7"
-
-		cset "name='AIF3_CAP Mixer SLIM TX8' 1"
-		cset "name='CDC_IF TX8 MUX' DEC8"
+		cset "name='AMIC4_5 SEL' AMIC4"
 	]
 
 	DisableSequence [
-		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia1' 0"
-		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia3' 0"
-		cset "name='SLIMBUS_1_RX Audio Mixer MultiMedia5' 0"
-
+		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia1' 0"
 		cset "name='MultiMedia2 Mixer SLIMBUS_0_TX' 0"
-		cset "name='MultiMedia4 Mixer SLIMBUS_1_TX' 0"
-		cset "name='MultiMedia6 Mixer SLIMBUS_2_TX' 0"
-
-		cset "name='CDC_IF TX0 MUX' ZERO"
+		
 		cset "name='CDC_IF TX7 MUX' ZERO"
-		cset "name='CDC_IF TX8 MUX' ZERO"
 	]
 
 	Value {
@@ -55,97 +36,40 @@ SectionVerb {
 	}
 }
 
-SectionDevice."Speaker" {
-	Comment "Speaker"
-
-	Value {
-		PlaybackPriority 200
-		PlaybackPCM "hw:${CardId},0" # MultiMedia1
-	}
-}
-
 SectionDevice."Earpiece" {
 	Comment "Earpiece"
 
-	Include.wcdeare.File "/codecs/wcd934x/EarpieceEnableSeq.conf"
-	Include.wcdeard.File "/codecs/wcd934x/EarpieceDisableSeq.conf"
+	EnableSequence [
+		cset "name='RX INT0_1 MIX1 INP0' RX0"
+	]
+
+	DisableSequence [
+		cset "name='RX INT0_1 MIX1 INP0' ZERO"
+	]
 
 	Value {
 		PlaybackPriority 100
-		PlaybackPCM "hw:${CardId},2" # MultiMedia3
+		PlaybackPCM "hw:${CardId},0" # MultiMedia1
 		PlaybackVolume "RX0 Digital Volume"
-	}
-}
-
-SectionDevice."Headphones" {
-	Comment "Headset"
-
-	Include.wcdhpe.File "/codecs/wcd934x/HeadphoneEnableSeq.conf"
-	Include.wcdhpd.File "/codecs/wcd934x/HeadphoneDisableSeq.conf"
-
-	Value {
-		PlaybackPriority 300
-		PlaybackPCM "hw:${CardId},4" # MultiMedia5
-		PlaybackMixer "default:${CardId}"
-		PlaybackMixerElem "HP Digital"
-		JackControl "Headset Jack"
-	}
-}
-
-SectionDevice."Headset" {
-	Comment "Headset Microphone"
-
-	Include.wcdmic1e.File "/codecs/wcd934x/HeadphoneMicEnableSeq.conf"
-	Include.wcdmic1d.File "/codecs/wcd934x/HeadphoneMicDisableSeq.conf"
-
-	Value {
-		CapturePriority 300
-		CapturePCM "hw:${CardId},1" # MultiMedia2
-		CaptureMixerElem "ADC2"
-		JackControl "Headset Jack"
-		CaptureVolume "ADC2 Volume"
-	}
-}
-
-SectionDevice."Mic1" {
-	Comment "Top Microphone"
-
-	Include.wcdmic2e.File "/codecs/wcd934x/AdditionalMic1EnableSeq.conf"
-	Include.wcdmic2d.File "/codecs/wcd934x/AdditionalMic1DisableSeq.conf"
-
-	Value {
-		CapturePriority 100
-		CapturePCM "hw:${CardId},3" # MultiMedia4
-		CaptureMixerElem "ADC3"
-		CaptureVolume "ADC3 Volume"
 	}
 }
 
 SectionDevice."Mic2" {
 	Comment "Bottom Microphone"
 
-	ConflictingDevice [
-		"Headset"
-	]
-
 	EnableSequence [
-		cset "name='AIF1_CAP Mixer SLIM TX0' 1"
-		cset "name='CDC_IF TX0 MUX' DEC0"
-		cset "name='ADC MUX0' AMIC"
-		cset "name='AMIC MUX0' ADC4"
-		cset "name='AMIC4_5 SEL' AMIC4"
-		cset "name='ADC4 Volume' 12"
+		cset "name='ADC MUX7' AMIC"
+		cset "name='AMIC MUX7' ADC4"
 	]
 
 	DisableSequence [
-		cset "name='AMIC MUX0' ZERO"
-		cset "name='ADC MUX0' ZERO"
-		cset "name='ADC4 Volume' 0"
+		cset "name='ADC MUX7' ZERO"
+		cset "name='AMIC MUX7' ZERO"
 	]
 
 	Value {
 		CapturePriority 200
-		CapturePCM "hw:${CardId},5" # MultiMedia6
+		CapturePCM "hw:${CardId},1" # MultiMedia2
 		CaptureMixerElem "ADC4"
 		CaptureVolume "ADC4 Volume"
 	}
