--- a/ucm2/OnePlus/enchilada/enchilada.conf
+++ b/ucm2/OnePlus/enchilada/enchilada.conf
@@ -13,6 +13,10 @@ BootSequence [
 	cset "name='RX0 Digital Volume' 84"
 	cset "name='RX1 Digital Volume' 84"
 	cset "name='RX2 Digital Volume' 84"
+
+	# The bottom mic needs this for working, for some UnKnOwN reason :(
+	cset "name='RX5 Digital Volume' 84"
+
 	cset "name='ADC1 Volume' 12"
 	cset "name='ADC2 Volume' 12"
 	cset "name='ADC3 Volume' 12"
