op6: add voicecall conf

--- a/ucm2/OnePlus/enchilada/enchilada.conf
+++ b/ucm2/OnePlus/enchilada/enchilada.conf
@@ -5,6 +5,11 @@ SectionUseCase."HiFi" {
 	Comment "HiFi quality Music."
 }
 
+SectionUseCase."Voice Call" {
+	File "/OnePlus/enchilada/VoiceCall.conf"
+	Comment "Make a phone call"
+}
+
 Include.card-init.File "/lib/card-init.conf"
 Include.ctl-remap.File "/lib/ctl-remap.conf"
 
