op6: make top mic working in HiFi

--- a/ucm2/OnePlus/enchilada/HiFi.conf
+++ b/ucm2/OnePlus/enchilada/HiFi.conf
@@ -8,13 +8,14 @@
 #  - Headphones		     : WCD934x driver : MultiMedia5 <-> SLIMBUS_1_RX (AIF2_PB)
 # Capture Devices
 #  - Headphones Mic      : WCD934x driver : MultiMedia2 <-> SLIMBUS_0_TX (AIF1_CAP, ADC2, TX0)
-#  - Internal Top Mic 	 : WCD934x driver : MultiMedia4 <-> SLIMBUS_1_TX (AIF2_CAP, ADC3, TX7)
-#  - Internal Bottom Mic : WCD934x driver : MultiMedia6 <-> SLIMBUS_2_TX (AIF3_CAP, ADC4, TX8)
+#  - Internal Top Mic 	 : WCD934x driver : MultiMedia4 <-> SLIMBUS_1_TX (AIF2_CAP, ADC3, TX6)
+#  - Internal Bottom Mic : WCD934x driver : MultiMedia6 <-> SLIMBUS_2_TX (AIF3_CAP, ADC4, TX7)
 
 SectionVerb {
 	EnableSequence [
 		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia1' 1"
 		cset "name='MultiMedia2 Mixer SLIMBUS_0_TX' 1"
+		cset "name='MultiMedia4 Mixer SLIMBUS_1_TX' 1"
 
 		cset "name='SLIM RX0 MUX' AIF1_PB"
 		cset "name='RX INT0 DEM MUX' CLSH_DSM_OUT"
@@ -22,13 +23,18 @@ SectionVerb {
 		cset "name='AIF1_CAP Mixer SLIM TX7' 1"
 		cset "name='CDC_IF TX7 MUX' DEC7"
 		cset "name='AMIC4_5 SEL' AMIC4"
+
+		cset "name='AIF2_CAP Mixer SLIM TX6' 1"
+		cset "name='CDC_IF TX6 MUX' DEC6"
 	]
 
 	DisableSequence [
 		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia1' 0"
 		cset "name='MultiMedia2 Mixer SLIMBUS_0_TX' 0"
+		cset "name='MultiMedia4 Mixer SLIMBUS_1_TX' 0"
 		
 		cset "name='CDC_IF TX7 MUX' ZERO"
+		cset "name='CDC_IF TX6 MUX' ZERO"
 	]
 
 	Value {
@@ -54,7 +60,7 @@ SectionDevice."Earpiece" {
 	}
 }
 
-SectionDevice."Mic2" {
+SectionDevice."Mic" {
 	Comment "Bottom Microphone"
 
 	EnableSequence [
@@ -72,5 +78,26 @@ SectionDevice."Mic2" {
 		CapturePCM "hw:${CardId},1" # MultiMedia2
 		CaptureMixerElem "ADC4"
 		CaptureVolume "ADC4 Volume"
+	}
+}
+
+SectionDevice."Mic2" {
+	Comment "Top Microphone"
+
+	EnableSequence [
+		cset "name='ADC MUX6' AMIC"
+		cset "name='AMIC MUX6' ADC3"
+	]
+
+	DisableSequence [
+		cset "name='ADC MUX6' ZERO"
+		cset "name='AMIC MUX6' ZERO"
+	]
+
+	Value {
+		CapturePriority 100
+		CapturePCM "hw:${CardId},3" # MultiMedia4
+		CaptureMixerElem "ADC3"
+		CaptureVolume "ADC3 Volume"
 	}
 }
