--- a/ucm2/OnePlus/enchilada/VoiceCall.conf
+++ b/ucm2/OnePlus/enchilada/VoiceCall.conf
@@ -60,7 +60,7 @@ SectionDevice."Earpiece" {
 	}
 }
 
-SectionDevice."Mic2" {
+SectionDevice."Mic" {
 	Comment "Bottom Microphone"
 
 	EnableSequence [
