op6: make speakers working in HiFi

--- a/ucm2/OnePlus/enchilada/HiFi.conf
+++ b/ucm2/OnePlus/enchilada/HiFi.conf
@@ -15,6 +15,7 @@ SectionVerb {
 	EnableSequence [
 		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia1' 1"
 		cset "name='MultiMedia2 Mixer SLIMBUS_0_TX' 1"
+		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia3' 1"
 		cset "name='MultiMedia4 Mixer SLIMBUS_1_TX' 1"
 
 		cset "name='SLIM RX0 MUX' AIF1_PB"
@@ -31,6 +32,7 @@ SectionVerb {
 	DisableSequence [
 		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia1' 0"
 		cset "name='MultiMedia2 Mixer SLIMBUS_0_TX' 0"
+		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia3' 0"
 		cset "name='MultiMedia4 Mixer SLIMBUS_1_TX' 0"
 		
 		cset "name='CDC_IF TX7 MUX' ZERO"
@@ -78,6 +80,23 @@ SectionDevice."Mic" {
 		CapturePCM "hw:${CardId},1" # MultiMedia2
 		CaptureMixerElem "ADC4"
 		CaptureVolume "ADC4 Volume"
+	}
+}
+
+SectionDevice."Speaker" {
+	Comment "Speaker"
+
+	EnableSequence [
+		cset "name='Amp DSP Switch' 1"
+	]
+
+	DisableSequence [
+		cset "name='Amp DSP Switch' 0"
+	]
+
+	Value {
+		PlaybackPriority 100
+		PlaybackPCM "hw:${CardId},2" # MultiMedia3
 	}
 }
 
