op6: enable headphones+mic and add some comments
Jack Detection is commented out, bcoz it doesnt work for me in the kernel side too
for some weird reason. So to atleast be able to test it by manually switching in gnome settings,
I have commented it out.

--- a/ucm2/OnePlus/enchilada/VoiceCall.conf
+++ b/ucm2/OnePlus/enchilada/VoiceCall.conf
@@ -3,25 +3,28 @@
 # Author: Joel Selvaraj <joelselvaraj.oss@gmail.com>
 #
 # Playback Devices
-#  - Internal Speaker    : TFA driver     : MultiMedia1 <-> QUAT_MI2S_RX
-#  - Earpiece            : WCD934x driver : MultiMedia3 <-> SLIMBUS_0_RX (AIF1_PB)
-#  - Headphones		     : WCD934x driver : MultiMedia5 <-> SLIMBUS_1_RX (AIF2_PB)
+#  - Earpiece            : WCD934x driver : MultiMedia1 <-> SLIMBUS_0_RX (AIF1_PB, RX0)
+#  - Internal Speaker    : MAX Amp driver : MultiMedia3 <-> QUAT_MI2S_RX
+#  - Headphones		     : WCD934x driver : MultiMedia5 <-> SLIMBUS_1_RX (AIF2_PB, RX2, RX3)
 # Capture Devices
-#  - Headphones Mic      : WCD934x driver : MultiMedia2 <-> SLIMBUS_0_TX (AIF1_CAP, ADC2, TX0)
-#  - Internal Top Mic 	 : WCD934x driver : MultiMedia4 <-> SLIMBUS_1_TX (AIF2_CAP, ADC3, TX7)
-#  - Internal Bottom Mic : WCD934x driver : MultiMedia6 <-> SLIMBUS_2_TX (AIF3_CAP, ADC4, TX8)
+#  - Internal Bottom Mic : WCD934x driver : MultiMedia2 <-> SLIMBUS_0_TX (AIF1_CAP, ADC4, TX7)
+#  - Internal Top Mic 	 : WCD934x driver : MultiMedia4 <-> SLIMBUS_1_TX (AIF2_CAP, ADC3, TX6)
+#  - Headphones Mic      : WCD934x driver : MultiMedia6 <-> SLIMBUS_2_TX (AIF3_CAP, ADC2, TX0)
 
 SectionVerb {
 	EnableSequence [
 		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia1' 1"
 		cset "name='MultiMedia2 Mixer SLIMBUS_0_TX' 1"
 
-        cset "name='SLIMBUS_0_RX Voice Mixer VoiceMMode1' 1"
+        # Q6Voice Routes for Call Audio Setup
+		cset "name='SLIMBUS_0_RX Voice Mixer VoiceMMode1' 1"
 		cset "name='VoiceMMode1 Capture Mixer SLIMBUS_0_TX' 1"
 
+		# Earpiece
 		cset "name='SLIM RX0 MUX' AIF1_PB"
 		cset "name='RX INT0 DEM MUX' CLSH_DSM_OUT"
 
+		# Bottom Mic
 		cset "name='AIF1_CAP Mixer SLIM TX7' 1"
 		cset "name='CDC_IF TX7 MUX' DEC7"
 		cset "name='AMIC4_5 SEL' AMIC4"
