--- a/ucm2/OnePlus/enchilada/HiFi.conf
+++ b/ucm2/OnePlus/enchilada/HiFi.conf
@@ -3,13 +3,13 @@
 # Author: Joel Selvaraj <joelselvaraj.oss@gmail.com>
 #
 # Playback Devices
-#  - Internal Speaker    : TFA driver     : MultiMedia1 <-> QUAT_MI2S_RX
-#  - Earpiece            : WCD934x driver : MultiMedia3 <-> SLIMBUS_0_RX (AIF1_PB)
-#  - Headphones		     : WCD934x driver : MultiMedia5 <-> SLIMBUS_1_RX (AIF2_PB)
+#  - Earpiece            : WCD934x driver : MultiMedia1 <-> SLIMBUS_0_RX (AIF1_PB, RX0)
+#  - Internal Speaker    : MAX Amp driver : MultiMedia3 <-> QUAT_MI2S_RX
+#  - Headphones		     : WCD934x driver : MultiMedia5 <-> SLIMBUS_1_RX (AIF2_PB, RX2, RX3)
 # Capture Devices
-#  - Headphones Mic      : WCD934x driver : MultiMedia2 <-> SLIMBUS_0_TX (AIF1_CAP, ADC2, TX0)
+#  - Internal Bottom Mic : WCD934x driver : MultiMedia2 <-> SLIMBUS_0_TX (AIF1_CAP, ADC4, TX7)
 #  - Internal Top Mic 	 : WCD934x driver : MultiMedia4 <-> SLIMBUS_1_TX (AIF2_CAP, ADC3, TX6)
-#  - Internal Bottom Mic : WCD934x driver : MultiMedia6 <-> SLIMBUS_2_TX (AIF3_CAP, ADC4, TX7)
+#  - Headphones Mic      : WCD934x driver : MultiMedia6 <-> SLIMBUS_2_TX (AIF3_CAP, ADC2, TX0)
 
 SectionVerb {
 	EnableSequence [
@@ -17,16 +17,31 @@ SectionVerb {
 		cset "name='MultiMedia2 Mixer SLIMBUS_0_TX' 1"
 		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia3' 1"
 		cset "name='MultiMedia4 Mixer SLIMBUS_1_TX' 1"
+		cset "name='SLIMBUS_1_RX Audio Mixer MultiMedia5' 1"
+		cset "name='MultiMedia6 Mixer SLIMBUS_2_TX' 1"
 
+		# Earpiece
 		cset "name='SLIM RX0 MUX' AIF1_PB"
 		cset "name='RX INT0 DEM MUX' CLSH_DSM_OUT"
 
+		# Headphones
+		cset "name='SLIM RX2 MUX' AIF2_PB"
+		cset "name='SLIM RX3 MUX' AIF2_PB"
+		cset "name='RX INT1 DEM MUX' CLSH_DSM_OUT"
+		cset "name='RX INT2 DEM MUX' CLSH_DSM_OUT"
+
+		# Bottom Mic
 		cset "name='AIF1_CAP Mixer SLIM TX7' 1"
 		cset "name='CDC_IF TX7 MUX' DEC7"
 		cset "name='AMIC4_5 SEL' AMIC4"
 
+		# Top Mic
 		cset "name='AIF2_CAP Mixer SLIM TX6' 1"
 		cset "name='CDC_IF TX6 MUX' DEC6"
+
+		# Headphones Mic
+		cset "name='AIF3_CAP Mixer SLIM TX0' 1"
+		cset "name='CDC_IF TX0 MUX' DEC0"
 	]
 
 	DisableSequence [
@@ -37,6 +52,7 @@ SectionVerb {
 		
 		cset "name='CDC_IF TX7 MUX' ZERO"
 		cset "name='CDC_IF TX6 MUX' ZERO"
+		cset "name='CDC_IF TX0 MUX' ZERO"
 	]
 
 	Value {
@@ -118,5 +134,53 @@ SectionDevice."Mic2" {
 		CapturePCM "hw:${CardId},3" # MultiMedia4
 		CaptureMixerElem "ADC3"
 		CaptureVolume "ADC3 Volume"
+	}
+}
+
+SectionDevice."Headphones" {
+	Comment "Headset"
+
+	EnableSequence [
+		cset "name='COMP1 Switch' 1"
+		cset "name='COMP2 Switch' 1"
+		cset "name='RX INT1_1 MIX1 INP0' RX2"
+		cset "name='RX INT2_1 MIX1 INP0' RX3"
+	]
+	
+	DisableSequence [
+		cset "name='COMP1 Switch' 0"
+		cset "name='COMP2 Switch' 0"
+		cset "name='RX INT1_1 MIX1 INP0' ZERO"
+		cset "name='RX INT2_1 MIX1 INP0' ZERO"
+	]
+
+	Value {
+		PlaybackPriority 30
+		PlaybackPCM "hw:${CardId},4" # MultiMedia5
+		PlaybackMixer "default:${CardId}"
+		PlaybackMixerElem "HP Digital"
+		#JackControl "Headset Jack"
+	}
+}
+
+SectionDevice."Headset" {
+	Comment "Headset Microphone"
+
+	EnableSequence [
+		cset "name='AMIC MUX0' ADC2"
+		cset "name='ADC MUX0' AMIC"
+	]
+
+	DisableSequence [
+		cset "name='AMIC MUX0' ZERO"
+		cset "name='ADC MUX0' ZERO"
+	]
+
+	Value {
+		CapturePriority 30
+		CapturePCM "hw:${CardId},5" # MultiMedia6
+		CaptureMixerElem "ADC2"
+		#JackControl "Headset Jack"
+		CaptureVolume "ADC2 Volume"
 	}
 }
