op6: add rest of the devices to voicecall conf

--- a/ucm2/OnePlus/enchilada/VoiceCall.conf
+++ b/ucm2/OnePlus/enchilada/VoiceCall.conf
@@ -15,8 +15,12 @@ SectionVerb {
 	EnableSequence [
 		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia1' 1"
 		cset "name='MultiMedia2 Mixer SLIMBUS_0_TX' 1"
+		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia3' 1"
+		cset "name='MultiMedia4 Mixer SLIMBUS_1_TX' 1"
+		cset "name='SLIMBUS_1_RX Audio Mixer MultiMedia5' 1"
+		cset "name='MultiMedia6 Mixer SLIMBUS_2_TX' 1"
 
-        # Q6Voice Routes for Call Audio Setup
+		# Q6Voice Routes for Call Audio Setup
 		cset "name='SLIMBUS_0_RX Voice Mixer VoiceMMode1' 1"
 		cset "name='VoiceMMode1 Capture Mixer SLIMBUS_0_TX' 1"
 
@@ -24,20 +28,38 @@ SectionVerb {
 		cset "name='SLIM RX0 MUX' AIF1_PB"
 		cset "name='RX INT0 DEM MUX' CLSH_DSM_OUT"
 
+		# Headphones
+		cset "name='SLIM RX2 MUX' AIF2_PB"
+		cset "name='SLIM RX3 MUX' AIF2_PB"
+		cset "name='RX INT1 DEM MUX' CLSH_DSM_OUT"
+		cset "name='RX INT2 DEM MUX' CLSH_DSM_OUT"
+
 		# Bottom Mic
 		cset "name='AIF1_CAP Mixer SLIM TX7' 1"
 		cset "name='CDC_IF TX7 MUX' DEC7"
 		cset "name='AMIC4_5 SEL' AMIC4"
+
+		# Top Mic
+		cset "name='AIF2_CAP Mixer SLIM TX6' 1"
+		cset "name='CDC_IF TX6 MUX' DEC6"
+
+		# Headphones Mic
+		cset "name='AIF3_CAP Mixer SLIM TX0' 1"
+		cset "name='CDC_IF TX0 MUX' DEC0"
 	]
 
 	DisableSequence [
 		cset "name='SLIMBUS_0_RX Audio Mixer MultiMedia1' 0"
 		cset "name='MultiMedia2 Mixer SLIMBUS_0_TX' 0"
+		cset "name='QUAT_MI2S_RX Audio Mixer MultiMedia3' 0"
+		cset "name='MultiMedia4 Mixer SLIMBUS_1_TX' 0"
 
-        cset "name='SLIMBUS_0_RX Voice Mixer VoiceMMode1' 0"
+		cset "name='SLIMBUS_0_RX Voice Mixer VoiceMMode1' 0"
 		cset "name='VoiceMMode1 Capture Mixer SLIMBUS_0_TX' 0"
 		
 		cset "name='CDC_IF TX7 MUX' ZERO"
+		cset "name='CDC_IF TX6 MUX' ZERO"
+		cset "name='CDC_IF TX0 MUX' ZERO"
 	]
 
 	Value {
@@ -81,5 +103,91 @@ SectionDevice."Mic" {
 		CapturePCM "hw:${CardId},1" # MultiMedia2
 		CaptureMixerElem "ADC4"
 		CaptureVolume "ADC4 Volume"
+	}
+}
+
+SectionDevice."Speaker" {
+	Comment "Speaker"
+
+	EnableSequence [
+		cset "name='Amp DSP Switch' 1"
+	]
+
+	DisableSequence [
+		cset "name='Amp DSP Switch' 0"
+	]
+
+	Value {
+		PlaybackPriority 100
+		PlaybackPCM "hw:${CardId},2" # MultiMedia3
+	}
+}
+
+SectionDevice."Mic2" {
+	Comment "Top Microphone"
+
+	EnableSequence [
+		cset "name='ADC MUX6' AMIC"
+		cset "name='AMIC MUX6' ADC3"
+	]
+
+	DisableSequence [
+		cset "name='ADC MUX6' ZERO"
+		cset "name='AMIC MUX6' ZERO"
+	]
+
+	Value {
+		CapturePriority 100
+		CapturePCM "hw:${CardId},3" # MultiMedia4
+		CaptureMixerElem "ADC3"
+		CaptureVolume "ADC3 Volume"
+	}
+}
+
+SectionDevice."Headphones" {
+	Comment "Headset"
+
+	EnableSequence [
+		cset "name='COMP1 Switch' 1"
+		cset "name='COMP2 Switch' 1"
+		cset "name='RX INT1_1 MIX1 INP0' RX2"
+		cset "name='RX INT2_1 MIX1 INP0' RX3"
+	]
+	
+	DisableSequence [
+		cset "name='COMP1 Switch' 0"
+		cset "name='COMP2 Switch' 0"
+		cset "name='RX INT1_1 MIX1 INP0' ZERO"
+		cset "name='RX INT2_1 MIX1 INP0' ZERO"
+	]
+
+	Value {
+		PlaybackPriority 30
+		PlaybackPCM "hw:${CardId},4" # MultiMedia5
+		PlaybackMixer "default:${CardId}"
+		PlaybackMixerElem "HP Digital"
+		#JackControl "Headset Jack"
+	}
+}
+
+SectionDevice."Headset" {
+	Comment "Headset Microphone"
+
+	EnableSequence [
+		cset "name='AMIC MUX0' ADC2"
+		cset "name='ADC MUX0' AMIC"
+	]
+
+	DisableSequence [
+		cset "name='AMIC MUX0' ZERO"
+		cset "name='ADC MUX0' ZERO"
+	]
+
+	Value {
+		CapturePriority 30
+		CapturePCM "hw:${CardId},5" # MultiMedia6
+		CaptureMixerElem "ADC2"
+		#JackControl "Headset Jack"
+		CaptureVolume "ADC2 Volume"
 	}
 }
