op6: DEC6 instead of DEC8 and some comments

--- a/ucm2/OnePlus/enchilada/enchilada.conf
+++ b/ucm2/OnePlus/enchilada/enchilada.conf
@@ -14,21 +14,25 @@ Include.card-init.File "/lib/card-init.conf"
 Include.ctl-remap.File "/lib/ctl-remap.conf"
 
 BootSequence [
-	cset "name='EAR PA Volume' 4"
+	# Earpiece Volume
 	cset "name='RX0 Digital Volume' 84"
+	
+	# Headphones Volume
 	cset "name='RX1 Digital Volume' 84"
 	cset "name='RX2 Digital Volume' 84"
 
-	# The bottom mic needs this for working, for some UnKnOwN reason :(
-	cset "name='RX5 Digital Volume' 84"
-
-	cset "name='ADC1 Volume' 12"
+	# Headphones Mic Analog and Digital Volumes
 	cset "name='ADC2 Volume' 12"
-	cset "name='ADC3 Volume' 12"
-	cset "name='ADC4 Volume' 12"
 	cset "name='DEC0 Volume' 84"
+	
+	# Phone Top Mic Analog and Digital Volumes
+	cset "name='ADC3 Volume' 12"
+	cset "name='DEC6 Volume' 84"
+	cset "name='RX5 Digital Volume' 84" # Needs this to work, for some UnKnOwN reason :(
+	
+	# Phone Bottom Mic Analog and Digital Volumes
+	cset "name='ADC4 Volume' 12"
 	cset "name='DEC7 Volume' 84"
-	cset "name='DEC8 Volume' 84"
 ]
 
 LibraryConfig.remap.Config {
