op6: uncomment jack control
It doesnt work for me in my op6 + wired headphones. I guess its my device faults. This should ideally work.

--- a/ucm2/OnePlus/enchilada/VoiceCall.conf
+++ b/ucm2/OnePlus/enchilada/VoiceCall.conf
@@ -166,7 +166,7 @@ SectionDevice."Headphones" {
 		PlaybackPCM "hw:${CardId},4" # MultiMedia5
 		PlaybackMixer "default:${CardId}"
 		PlaybackMixerElem "HP Digital"
-		#JackControl "Headset Jack"
+		JackControl "Headset Jack"
 	}
 }
 
@@ -187,7 +187,7 @@ SectionDevice."Headset" {
 		CapturePriority 30
 		CapturePCM "hw:${CardId},5" # MultiMedia6
 		CaptureMixerElem "ADC2"
-		#JackControl "Headset Jack"
 		CaptureVolume "ADC2 Volume"
+		JackControl "Headset Jack"
 	}
 }
